ping_pong/manifests-gke/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      containers:
        - name: ping-pong
          image: msami936/ping-pong:3.1
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
