ping_pong/manifests-gke/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong
  namespace: exercises
spec:
  type: LoadBalancer
  selector:
    app: ping-pong
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
