ping_pong/manifests-gke/httproute-ping-pong.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ping-pong-route
  namespace: exercises
spec:
  parentRefs:
    - name: dwk-gateway
      kind: Gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /pingpong
        - path:
            type: PathPrefix
            value: /pings
      backendRefs:
        - name: ping-pong
          port: 80
