ping_pong/manifests-gke/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dwk-ingress
  namespace: exercises
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: log-output
      port:
        number: 80
  rules:
    - http:
        paths:
          - path: /pingpong
            pathType: Prefix
            backend:
              service:
                name: ping-pong
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: log-output
                port:
                  number: 80
